--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
   color: white;
   background-color: red;
 }
-#going_to_the_right{
-  margin-left: 50;
+#going_to_the_right {
+  margin-left: 50px;
 }
